# pdf-chatbot

./: .dockerignore  .env.example  .gitignore  Arch.txt  Jsonf.txt  Logic.txt  Notes.txt  README.md  chatapp.py  client_ui.py  dockerfile  finger.py  logger.py  pyproject.toml  requirement.txt  requirements.txt  runapp.bat  utils.py
.github/workflows/: aci-AutoDeployTrigger-16bf543b-6c41-4bf8-bd2b-e798b3efc6ac.yml
app/: chatapp.py  client_ui.py  config.py  utils.py
apps/backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/backend/scripts/: repo.py  run_backend.sh
apps/backend/src/app/: db.py  main.py  models.py
apps/backend/src/app/agents/: wikipedia.py
apps/backend/src/app/api/: chat.py  upload.py
apps/backend/src/app/auth/: deps.py  routes.py  security.py
apps/backend/src/app/core/: embedding_client.py  llm_client.py  logging_config.py  settings.py
apps/backend/src/app/db/: base.py  models.py
apps/backend/src/app/preprocessing/: pdf_ocr.py  preprocess.py
apps/backend/src/app/prompts/: prompt_template.py
apps/backend/src/app/rag/: evaluate_rag.py  log_rag.py  retrieval.py
apps/backend/src/app/schemas/: auth_schema.py  chat_schema.py  document_schema.py
apps/backend/src/app/scripts/: evaluate_rag.py
apps/backend/tests/: conftest_backend.py  test_auth.py  test_chat.py  test_upload.py
apps/frontend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  ui.py
apps/frontend/core/: settings.py
apps/frontend/rag_ui/: api_client.py  app.py  auth.py  state.py
apps/frontend/rag_ui/layout/: chat_page.py  sidebar.py
apps/frontend/scripts/: run_frontend.sh
apps/frontend/tests/: conftest_frontend.py  test_api_client.py  test_layout_smoke.py  test_state.py
config/: logging.yaml
infra/: docker-compose.yml
scripts/: run_all.sh  run_ollama.sh
src/backend/: app.py  preprocess.py  schemas.py  utils.py
src/backend/core/: logging_config.py  settings.py
src/backend/prompts/: prompt_template.py
src/backend/routes/: chat.py  upload.py
src/frontend/: ui.py
